--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
         "babel-plugin-macros": "^3.1.0",
         "craco-alias": "3.0.1",
         "datatables.net-dt": "^1.11.4",
+        "export-from-json": "^1.5.2",
         "formik": "2.2.9",
         "gatekeeper-client-sdk": "0.4.2",
         "i18next": "21.4.2",
         "i18next-browser-languagedetector": "6.1.2",
+        "jwt-decode": "^3.1.2",
         "luxon": "2.1.1",
         "node-sass": "6.0.1",
         "react": "17.0.2",
