--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react-bootstrap-table2-editor": "^1.4.0",
         "react-bootstrap-table2-paginator": "^2.1.2",
         "react-dom": "17.0.2",
+        "react-highlight-words": "^0.17.0",
         "react-i18next": "11.14.2",
         "react-icons": "^4.3.1",
         "react-redux": "7.2.6",
