--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "antd": "^4.18.8",
         "axios": "0.24.0",
         "babel-plugin-macros": "^3.1.0",
+        "chart.js": "^3.7.1",
         "craco-alias": "3.0.1",
         "datatables.net-dt": "^1.11.4",
         "export-from-json": "^1.5.2",
