--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react-bootstrap-table-next": "^4.0.3",
         "react-bootstrap-table2-editor": "^1.4.0",
         "react-bootstrap-table2-paginator": "^2.1.2",
+        "react-chartjs-2": "^4.0.1",
         "react-dom": "17.0.2",
         "react-highlight-words": "^0.17.0",
         "react-i18next": "11.14.2",
