--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         ]
     },
     "dependencies": {
+        "@ant-design/icons": "^4.7.0",
         "@craco/craco": "^6.4.0",
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
