--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "react-redux": "7.2.6",
         "react-router-dom": "5.3.0",
         "react-scripts": "4.0.3",
+        "react-simple-maps": "^2.3.0",
         "react-toastify": "8.1.0",
         "redux": "4.1.2",
         "redux-logger": "^3.0.6",
