--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "adminlte-3-react",
+    "name": "BornXL",
     "version": "0.1.0",
-    "private": true,
+    "private": false,
     "scripts": {
         "start": "craco start",
         "build": "craco build",
@@ -45,6 +45,7 @@
         "@testing-library/user-event": "13.5.0",
         "antd": "^4.18.8",
         "axios": "0.24.0",
+        "axios-retry": "^3.2.4",
         "babel-plugin-macros": "^3.1.0",
         "chart.js": "^3.7.1",
         "craco-alias": "3.0.1",
