--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
         "@fortawesome/free-regular-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/react-fontawesome": "^0.1.17",
+        "@material-ui/core": "^4.12.4",
         "@mui/icons-material": "^5.5.1",
         "@mui/material": "^5.4.4",
         "@mui/styled-engine-sc": "^5.4.2",
+        "@react-leaflet/core": "^1.0.2",
         "@react-native-async-storage/async-storage": "^1.16.1",
         "@reduxjs/toolkit": "1.6.2",
         "@testing-library/jest-dom": "5.15.0",
@@ -56,19 +58,21 @@
         "i18next": "21.4.2",
         "i18next-browser-languagedetector": "6.1.2",
         "jwt-decode": "^3.1.2",
+        "leaflet": "^1.7.1",
         "luxon": "2.1.1",
         "moment": "^2.29.1",
         "node-sass": "6.0.1",
-        "react": "17.0.2",
+        "react": "^17.0.2",
         "react-bootstrap": "1.6.4",
         "react-bootstrap-table-next": "^4.0.3",
         "react-bootstrap-table2-editor": "^1.4.0",
         "react-bootstrap-table2-paginator": "^2.1.2",
         "react-chartjs-2": "^4.0.1",
-        "react-dom": "17.0.2",
+        "react-dom": "^17.0.2",
         "react-highlight-words": "^0.17.0",
         "react-i18next": "11.14.2",
         "react-icons": "^4.3.1",
+        "react-leaflet": "^3.1.0",
         "react-redux": "7.2.6",
         "react-router-dom": "5.3.0",
         "react-scripts": "4.0.3",
