--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "react-highlight-words": "^0.17.0",
         "react-i18next": "11.14.2",
         "react-icons": "^4.3.1",
+        "react-idle-timer": "^4.6.4",
         "react-leaflet": "^3.1.0",
         "react-redux": "7.2.6",
         "react-router-dom": "5.3.0",
