--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "axios-retry": "^3.2.4",
         "babel-plugin-macros": "^3.1.0",
         "chart.js": "^3.7.1",
+        "chartjs-plugin-datalabels": "^2.0.0",
         "craco-alias": "3.0.1",
         "datatables.net-dt": "^1.11.4",
         "export-from-json": "^1.5.2",
