--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
         "redux-saga": "^1.1.3",
         "styled-components": "^5.3.3",
         "uuid": "8.3.2",
+        "xlsx": "^0.18.5",
         "yup": "0.32.11"
     },
     "devDependencies": {
