--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "craco-alias": "3.0.1",
         "datatables.net-dt": "^1.11.4",
         "export-from-json": "^1.5.2",
+        "file-saver": "^2.0.5",
         "formik": "2.2.9",
         "gatekeeper-client-sdk": "0.4.2",
         "i18next": "21.4.2",
