--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "i18next-browser-languagedetector": "6.1.2",
         "jwt-decode": "^3.1.2",
         "leaflet": "^1.7.1",
+        "leaflet-routing-machine": "^3.2.12",
         "luxon": "2.1.1",
         "moment": "^2.29.1",
         "node-sass": "6.0.1",
